# sagittal_average

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
github/workflow/: pytest.yml
how_to/: get_started.md
src/sagittal_average/: command.py  sagittal_brain.py
test/: test_sagittal_brain.py
tests/: test_sagittal_brain.py
