[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagittal_average"
version = "0.1.0"

[project.scripts]
sagittal_average_run = "sagittal_average.command:process"

[tool.hatch.build.targets.wheel]
packages = [
  "src/sagittal_average",
]

[project.dependencies]
numpy = "^1.25"
pytest = "^8.3"